# legume

./: Cargo.toml  README.md  build.rs
src/: any_bits.rs  array.rs  check_bits.rs  forget.rs  freeze.rs  func.rs  inhabit.rs  lib.rs  macros.rs  no_uninit.rs  no_uninit_in_option.rs  ptr.rs  unaligned.rs  util.rs  zeroable.rs  zeroable_in_option.rs
